# GtkVisa

./: CMakeLists.txt  README.md  data.c  data.h  fpc.c  fpc.h  gtkcharts.c  gtkcharts.h  main.c  vcpkg.json  window.c  window.h
