cmake_minimum_required(VERSION 3.26.4)
set(CMAKE_TOOLCHAIN_FILE D:/vcpkg/scripts/buildsystems/vcpkg.cmake)
project(test)
file(GLOB HEADS ${PROJECT_SOURCE_DIR}/*.h)
file(GLOB SOURS ${PROJECT_SOURCE_DIR}/*.c)
set(CMAKE_EXE_LINKER_FLAGS "-static")
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
find_package(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK4 REQUIRED gtk4)
include_directories(${GTK4_INCLUDE_DIRS})
add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
add_executable(${PROJECT_NAME} ${SOURS})
add_definitions(${GTK4_CFLAGS_OTHER})
target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_link_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/lib ${GTK4_LIBRARY_DIRS})
target_link_libraries(${PROJECT_NAME} PRIVATE visa64.lib Threads::Threads ${GTK4_LIBRARIES})
set_property(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 17)